# evently

./: .dockerignore  .env.example  .gitignore  CLOUDFLARE_SETUP.md  Dockerfile  Events App — Design Summary.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  ideas  litestream.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  settings_test.py  urls.py
core/: admin.py  apps.py  auth.py  channels.py  checks.py  ics.py  messaging.py  models.py  security.py  views.py
core/migrations/: 0001_initial.py  0002_alter_invitation_state.py  0003_poll_polloption_pollvote_and_more.py  0004_feedback.py  0005_remove_household_primary_contact.py
core/static/core/: app.css  app.js  manifest.webmanifest  sw.js
core/templates/admin/: index.html  invite_to_event.html
core/templates/core/: admin_home.html  base.html  contact_form.html  contacts_home.html  dashboard.html  household_edit.html  household_new.html  invite.html  landing.html  org_base.html  queue.html  rsvp.html  rsvp_unavailable.html  send.html
mockups/: dashboard.html  rsvp-guest.html  rsvp-household.html
tests/: conftest.py  test_admin.py  test_assisted.py  test_auth.py  test_checks.py  test_contacts.py  test_dashboard.py  test_feedback.py  test_models.py  test_organizer.py  test_polls.py  test_regressions.py  test_rsvp.py  test_security.py  test_security_txt.py  test_sending.py  test_webhook.py
