[project]
name = "evently"
version = "0.1.0"
description = "Self-hosted event invites & RSVP tracking (a private Facebook Events replacement)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "python-dotenv>=1.0",
    "resend>=2.0",          # transactional email (§6)
    "phonenumbers>=8.13",   # normalise phones to E.164 for wa.me links (§6)
    "pyjwt[crypto]>=2.9",   # validate the Cloudflare Access JWT (§8)
    "httpx>=0.27",          # fetch Access JWKS
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
    "ruff>=0.6",
]

[tool.uv]
# This is an application, not a library — manage the environment, don't build/install it.
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
